<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>in.dl-java</groupId>
	<artifactId>dl-java-example</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>DL Java Example</name>
	<description>Example usage of the DL Java library</description>
	<properties>
		<java.version>18</java.version>
		<maven.compiler.target>1.18</maven.compiler.target>
		<maven.compiler.source>1.18</maven.compiler.source>
	</properties>
	<dependencies>
		<dependency>
			<groupId>in.dl-java</groupId>
			<artifactId>dl-java</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>18</source>
					<target>18</target>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>jdk.incubator.vector</arg>
					</compilerArgs>

				</configuration>
			</plugin>
		</plugins>
	</build>
</project>